Connecting Angular w/ getEmployeeById rest

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,9 +4,8 @@ COPY build.gradle ./
 RUN gradle clean build --no-daemon > /dev/null 2>&1 || true
 COPY ./ /app
 RUN gradle clean build --no-daemon --stacktrace
-RUN gradle shadowJar
 
 FROM openjdk
-COPY --from=build /app/build/libs/*-all.jar /app.jar
+COPY --from=build /app/build/libs/AngularSpringBoot-0.0.1-SNAPSHOT.jar /app.jar
 EXPOSE 8080
 ENTRYPOINT exec java -jar app.jar
